--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>SunnySide</title>
 </head>
 
-<body style="background-color: blue;">
+<body style="background-color: gray;">
 
     <header>
         <img src="assets/sunnyside.svg" width="170" height="33" alt="SunnySide logo">
@@ -69,32 +69,39 @@
 
         <h2>CLIENT TESTIMONIALS</h2>
 
-        <blockquote>
-            <img src="assets/image-emily.jpg" width="72" height="72" alt="Emily picture">
-            <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were
-                always hit.</p>
-        </blockquote>
+        <figure>
+            <img src="assets/image-emily.jpg" width="72" height="72" alt="Emily R.">
+            <blockquote>
+                <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were
+                    always hit.</p>
+            </blockquote>
+            <figcaption>
+                Emily R. <cite>Marketing Director</cite>
+            </figcaption>
+        </figure>
 
-        <p>Emily Raitakovsky</p>
-        <p>Marketing Director</p>
+        <figure>
+            <img src="assets/image-thomas.jpg" width="72" height="72" alt="Emily R.">
+            <blockquote>
+                <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying
+                    and
+                    enjoyable experience.</p>
+            </blockquote>
+            <figcaption>
+                Thomas S. <cite>Marketing Director</cite>
+            </figcaption>
+        </figure>
 
-        <blockquote>
-            <img src="assets/image-thomas.jpg" width="72" height="72" alt="Thomas picture">
-            <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and
-                enjoyable experience.</p>
-        </blockquote>
-
-        <p>Thomas S.</p>
-        <p>Marketing Director</p>
-
-        <blockquote>
-            <img src="assets/image-jennie.jpg" width="72" height="72" alt="Jennie picture">
-            <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-            </p>
-        </blockquote>
-
-        <p>Jenne F.</p>
-        <p>Marketing Director</p>
+        <figure>
+            <img src="assets/image-jennie.jpg" width="72" height="72" alt="Jennie picture.">
+            <blockquote>
+                <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly
+                    recommended!.</p>
+            </blockquote>
+            <figcaption>
+                Jenne F. <cite>Marketing Director</cite>
+            </figcaption>
+        </figure>
 
         <picture>
             <source media="(min-width:800px)" srcset="assets/desktop/image-gallery-milkbottles.jpg">
